fixed z-index error and added banner wave

--- a/sass/components/content/_page-about.scss
+++ b/sass/components/content/_page-about.scss
@@ -25,6 +25,13 @@
       height: 500px;
     }
 
+    @include mq(tablet) {
+      height: 420px;
+      max-width: 1100px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
     .gallery-item {
       width: 200px;
       height: 200px;
