--- a/sass/components/content/_page-home.scss
+++ b/sass/components/content/_page-home.scss
@@ -105,8 +105,35 @@
   }
 }
 
+/* home-banner-section
+ * =============================== */
+ .home-banner-bg{
+  position: relative;
+ }
+
+ .home-banner-wave{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  height: 192px;
+  width: 100%;
+  background-image: url("images/home-banner-wave.webp");
+  background-position: 44% bottom;
+  z-index: 5;
+ }
+
 /* home-manifesto-section
  * =============================== */
+ .home-manifesto-bg {
+  background-color: #f5f5f5;
+}
+
+.home-manifesto-bg h3{
+  font-size: 2.5rem;
+ }
+ .home-manifesto-bg h2{
+  display: none;
+ }
 .manifesto-text {
   position: static; // 讓 submenu 佔據空間
   max-height: 0;
@@ -149,6 +176,7 @@
   top: 0;
   height: 300px;
   background-image: url('images/home-class-bg-top.webp');
+  background-color: #f5f5f5;
 }
 
 .bg-mid {
