--- a/sass/components/content/_page-testimonials.scss
+++ b/sass/components/content/_page-testimonials.scss
@@ -29,6 +29,7 @@
 .modal-state:checked+.modal {
     opacity: 1;
     visibility: visible;
+    z-index: 10;
 }
 
 .modal-state:checked+.modal .modal__inner {
