--- a/style.css
+++ b/style.css
@@ -1516,6 +1516,14 @@ body {
 		height: 500px;
 	}
 }
+@media (min-width: 64em) {
+	.manifesto-section .acf-gallery {
+		height: 420px;
+		max-width: 1100px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+}
 .manifesto-section .acf-gallery .gallery-item {
 	width: 200px;
 	height: 200px;
@@ -3076,6 +3084,7 @@ body {
 .modal-state:checked + .modal {
 	opacity: 1;
 	visibility: visible;
+	z-index: 10;
 }
 
 .modal-state:checked + .modal .modal__inner {
@@ -3658,8 +3667,37 @@ body {
 	padding-top: 0.75rem;
 }
 
+/* home-banner-section
+ * =============================== */
+.home-banner-bg {
+	position: relative;
+}
+
+.home-banner-wave {
+	position: absolute;
+	right: 0;
+	bottom: 0;
+	height: 192px;
+	width: 100%;
+	background-image: url("images/home-banner-wave.webp");
+	background-position: 44% bottom;
+	z-index: 5;
+}
+
 /* home-manifesto-section
  * =============================== */
+.home-manifesto-bg {
+	background-color: #f5f5f5;
+}
+
+.home-manifesto-bg h3 {
+	font-size: 2.5rem;
+}
+
+.home-manifesto-bg h2 {
+	display: none;
+}
+
 .manifesto-text {
 	position: static;
 	max-height: 0;
@@ -3701,6 +3739,7 @@ body {
 	top: 0;
 	height: 300px;
 	background-image: url("images/home-class-bg-top.webp");
+	background-color: #f5f5f5;
 }
 
 .bg-mid {
